--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 
 // AI Coach functionality with Gemini API
-const API_KEY = "AIzaSyDAyitxNjtkkP92-aFhuBgp28nviQTtILQ";
+const API_KEY = "";
 const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent?key=${API_KEY}`;
 
 async function sendMessage() {
